--- a/hsp3dish/gameplay/gameplay.vcxproj.filters
+++ b/hsp3dish/gameplay/gameplay.vcxproj.filters
@@ -900,6 +900,9 @@
     <ClCompile Include="src\VerticalLayout.cpp">
       <Filter>ソース ファイル\gameplay</Filter>
     </ClCompile>
+    <ClCompile Include="src\stb_image.cpp">
+      <Filter>ソース ファイル\gameplay</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\extlib\src\LinearMath\btAabbUtil2.h">
@@ -1890,6 +1893,9 @@
       <Filter>ソース ファイル\gameplay</Filter>
     </ClInclude>
     <ClInclude Include="src\VerticalLayout.h">
+      <Filter>ソース ファイル\gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="src\stb_image.h">
       <Filter>ソース ファイル\gameplay</Filter>
     </ClInclude>
   </ItemGroup>
