--- a/hspcmp/win32dll/hspcmp.vcxproj
+++ b/hspcmp/win32dll/hspcmp.vcxproj
@@ -87,6 +87,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\hsp3\filepack.cpp" />
+    <ClCompile Include="..\..\hsp3\filepack_write.cpp" />
+    <ClCompile Include="..\..\hsp3\hsp3crypt.cpp" />
+    <ClCompile Include="..\..\hsp3\hsp3utfcnv.cpp" />
+    <ClCompile Include="..\..\hsp3\strnote.cpp" />
     <ClCompile Include="..\ahtmodel.cpp" />
     <ClCompile Include="..\ahtobj.cpp" />
     <ClCompile Include="..\codegen.cpp" />
@@ -98,7 +103,6 @@
     <ClCompile Include="..\label.cpp" />
     <ClCompile Include="..\localinfo.cpp" />
     <ClCompile Include="..\membuf.cpp" />
-    <ClCompile Include="..\strnote.cpp" />
     <ClCompile Include="..\tagstack.cpp" />
     <ClCompile Include="..\token.cpp" />
     <ClCompile Include="..\win32\supio_win.cpp" />
@@ -106,6 +110,10 @@
     <ClCompile Include="Hspcmp3.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\hsp3\filepack.h" />
+    <ClInclude Include="..\..\hsp3\hsp3crypt.h" />
+    <ClInclude Include="..\..\hsp3\hsp3utfcnv.h" />
+    <ClInclude Include="..\..\hsp3\strnote.h" />
     <ClInclude Include="..\ahtmodel.h" />
     <ClInclude Include="..\ahtobj.h" />
     <ClInclude Include="..\comutil.h" />
@@ -116,7 +124,6 @@
     <ClInclude Include="..\label.h" />
     <ClInclude Include="..\localinfo.h" />
     <ClInclude Include="..\membuf.h" />
-    <ClInclude Include="..\strnote.h" />
     <ClInclude Include="..\supio.h" />
     <ClInclude Include="..\tagstack.h" />
     <ClInclude Include="..\token.h" />
