DPMファイル及びexe埋め込みファイルにフォルダ名と長いファイル名が使用できるように修正 #pack,#epack命令のファイル指定に'*'記号によるワイルドカードが使用できるように修正
Former-commit-id: 350cf32cb8ac75a72918ebc23dde746774e280a9

--- a/hsp3/makefile
+++ b/hsp3/makefile
@@ -150,6 +150,7 @@ ifneq ($(filter linux,$(PLATFORM)),)
            hspvar_core.o hspvar_double.o hspvar_int.o hspvar_label.o \
            hspvar_str.o hspvar_struct.o stack.o strbuf.o strnote.o \
            dpmread.o linux/supio_linux.o linux/hsp3cl.o \
+           hsp3crypt.o hsp3utfcnv.o filepack.o \
            linux/hsp3ext_linux.o linux/hsp3gr_linux.o
     RESES =
     LIBS = m stdc++
