--- a/hspcmp/win32/hspcmp.vcxproj
+++ b/hspcmp/win32/hspcmp.vcxproj
@@ -90,6 +90,9 @@
     <ClCompile Include="..\..\hsp3\filepack_write.cpp" />
     <ClCompile Include="..\..\hsp3\hsp3crypt.cpp" />
     <ClCompile Include="..\..\hsp3\hsp3utfcnv.cpp" />
+    <ClCompile Include="..\..\hsp3\strbuf.cpp" />
+    <ClCompile Include="..\..\hsp3\strnote.cpp" />
+    <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
     <ClCompile Include="..\ahtmodel.cpp" />
     <ClCompile Include="..\ahtobj.cpp" />
     <ClCompile Include="..\codegen.cpp" />
@@ -102,15 +105,16 @@
     <ClCompile Include="..\localinfo.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\membuf.cpp" />
-    <ClCompile Include="..\strnote.cpp" />
     <ClCompile Include="..\tagstack.cpp" />
     <ClCompile Include="..\token.cpp" />
-    <ClCompile Include="supio_win.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\hsp3\filepack.h" />
     <ClInclude Include="..\..\hsp3\hsp3crypt.h" />
     <ClInclude Include="..\..\hsp3\hsp3utfcnv.h" />
+    <ClInclude Include="..\..\hsp3\strbuf.h" />
+    <ClInclude Include="..\..\hsp3\strnote.h" />
+    <ClInclude Include="..\..\hsp3\win32gui\supio_win.h" />
     <ClInclude Include="..\ahtmodel.h" />
     <ClInclude Include="..\ahtobj.h" />
     <ClInclude Include="..\comutil.h" />
@@ -121,11 +125,9 @@
     <ClInclude Include="..\label.h" />
     <ClInclude Include="..\localinfo.h" />
     <ClInclude Include="..\membuf.h" />
-    <ClInclude Include="..\strnote.h" />
     <ClInclude Include="..\supio.h" />
     <ClInclude Include="..\tagstack.h" />
     <ClInclude Include="..\token.h" />
-    <ClInclude Include="supio_win.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
