--- a/hspcmp/win32dll/hspcmp.vcxproj
+++ b/hspcmp/win32dll/hspcmp.vcxproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -91,7 +91,9 @@
     <ClCompile Include="..\..\hsp3\filepack_write.cpp" />
     <ClCompile Include="..\..\hsp3\hsp3crypt.cpp" />
     <ClCompile Include="..\..\hsp3\hsp3utfcnv.cpp" />
+    <ClCompile Include="..\..\hsp3\strbuf.cpp" />
     <ClCompile Include="..\..\hsp3\strnote.cpp" />
+    <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
     <ClCompile Include="..\ahtmodel.cpp" />
     <ClCompile Include="..\ahtobj.cpp" />
     <ClCompile Include="..\codegen.cpp" />
@@ -105,7 +107,6 @@
     <ClCompile Include="..\membuf.cpp" />
     <ClCompile Include="..\tagstack.cpp" />
     <ClCompile Include="..\token.cpp" />
-    <ClCompile Include="..\win32\supio_win.cpp" />
     <ClCompile Include="dpm.cpp" />
     <ClCompile Include="Hspcmp3.cpp" />
   </ItemGroup>
@@ -113,7 +114,9 @@
     <ClInclude Include="..\..\hsp3\filepack.h" />
     <ClInclude Include="..\..\hsp3\hsp3crypt.h" />
     <ClInclude Include="..\..\hsp3\hsp3utfcnv.h" />
+    <ClInclude Include="..\..\hsp3\strbuf.h" />
     <ClInclude Include="..\..\hsp3\strnote.h" />
+    <ClInclude Include="..\..\hsp3\win32gui\supio_win.h" />
     <ClInclude Include="..\ahtmodel.h" />
     <ClInclude Include="..\ahtobj.h" />
     <ClInclude Include="..\comutil.h" />
@@ -127,7 +130,6 @@
     <ClInclude Include="..\supio.h" />
     <ClInclude Include="..\tagstack.h" />
     <ClInclude Include="..\token.h" />
-    <ClInclude Include="..\win32\supio_win.h" />
     <ClInclude Include="dpm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
