--- a/hsp3/win32/hsp3cl.vcxproj.filters
+++ b/hsp3/win32/hsp3cl.vcxproj.filters
@@ -102,6 +102,15 @@
     <ClCompile Include="..\strnote.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
+    <ClCompile Include="..\filepack.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\hsp3crypt.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\hsp3utfcnv.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\win32gui\comobj.h">
@@ -181,6 +190,15 @@
     </ClInclude>
     <ClInclude Include="..\Supio.h">
       <Filter>ヘッダー ファイル\core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\filepack.h">
+      <Filter>ソース ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\hsp3crypt.h">
+      <Filter>ソース ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\hsp3utfcnv.h">
+      <Filter>ソース ファイル\win</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
