--- a/hsp3dish/win32gp/hsp3gp.vcxproj.filters
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj.filters
@@ -144,6 +144,15 @@
     <ClCompile Include="..\hspwnd_edit.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\hsp3\filepack.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\hsp3\hsp3crypt.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\hsp3\hsp3utfcnv.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dxsnd.h">
@@ -283,6 +292,15 @@
     </ClInclude>
     <ClInclude Include="..\emscripten\fontsystem.h">
       <Filter>ヘッダー ファイル\win</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hsp3\filepack.h">
+      <Filter>ヘッダー ファイル\core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hsp3\hsp3crypt.h">
+      <Filter>ヘッダー ファイル\core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\hsp3\hsp3utfcnv.h">
+      <Filter>ヘッダー ファイル\core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
