スクリプトエディタの更新
Former-commit-id: 24fc99e028e24a4865daa59da0082e811ca267dd

--- a/tools/win32/hsed3_footy2/hsed_vc2017.vcxproj
+++ b/tools/win32/hsed3_footy2/hsed_vc2017.vcxproj
@@ -65,11 +65,13 @@
     <OutDir>Release\</OutDir>
     <IntDir>Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release_en|Win32'">
     <OutDir>Release_en\</OutDir>
     <IntDir>Release_en\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
