[HSP3Dish] 標準スプライトのBGマップを描画する際にセルNo.0はスキップするように修正 [HSP3Dish][Windows] dialog命令によるコモンダイアログの呼び出しに対応(Windowsのみ)
Former-commit-id: 99908c3a01559311b51f85293afac9fe66eee753

--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="..\sysreq.cpp" />
     <ClCompile Include="..\texmes.cpp" />
     <ClCompile Include="dxsnd.cpp" />
+    <ClCompile Include="filedlg.cpp" />
     <ClCompile Include="hgiox.cpp" />
     <ClCompile Include="hgtex.cpp" />
     <ClCompile Include="hsp3dish.cpp" />
@@ -236,6 +237,7 @@
     <ClInclude Include="..\texmes.h" />
     <ClInclude Include="..\webtask.h" />
     <ClInclude Include="dxsnd.h" />
+    <ClInclude Include="filedlg.h" />
     <ClInclude Include="hginc.h" />
     <ClInclude Include="hgiox.h" />
     <ClInclude Include="hgtex.h" />
