--- a/hsp3dish/win32/hsp3dish.vcxproj.filters
+++ b/hsp3dish/win32/hsp3dish.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="..\..\hsp3\hsp3utfcnv.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
+    <ClCompile Include="filedlg.cpp">
+      <Filter>ソース ファイル\win</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\hsp3\dpmread.h">
@@ -295,6 +298,9 @@
     </ClInclude>
     <ClInclude Include="..\..\hsp3\hsp3utfcnv.h">
       <Filter>ヘッダー ファイル\core</Filter>
+    </ClInclude>
+    <ClInclude Include="filedlg.h">
+      <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
